Started with left sidebar

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@
 }
 
 body {
+  background: #fafaf9;
+  padding: 0 2.5rem;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
