--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  background: #fafaf9;
+  background: #eaeaea;
   padding: 0 2.5rem;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
