--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@ body {
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   margin-bottom: 1rem;
+  margin-right: 0.8rem;
 }
 
 code {
