--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,12 @@
   box-sizing: border-box;
 }
 
+.App {
+  padding: 0 1.7rem 0 2.5rem;
+}
+
 body {
   background: #eaeaea;
-  padding: 0 2.5rem;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
