--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,16 @@ body {
   margin-right: 0.8rem;
 }
 
+@media screen and (max-width: 1064px) {
+  .App {
+    padding: 0 0 0 0.5rem;
+  }
+
+  .shadow {
+    margin-right: 0.5rem;
+  }
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
