--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ body {
   margin-right: 0.8rem;
 }
 
-@media screen and (max-width: 1064px) {
+@media screen and (max-width: 66.5rem) {
   .App {
     padding: 0 0 0 0.5rem;
   }
